[tool.pdm.version]
source = "scm"
version_format = "pdm_build:format_version"

[project]
dynamic = ["version"]

name = "sphinxcontrib-yowasp-wavedrom"
description = "A Sphinx extension for embedding WaveDrom diagrams"
readme = "README.md"
authors = [{name = "Catherine", email = "whitequark@whitequark.org"}]
license = {text = "MIT"}
classifiers = [
	"License :: OSI Approved :: MIT License"
]

requires-python = "~=3.8"
dependencies = [
    "importlib_resources; python_version<'3.9'",
    "Sphinx~=7.1",
    "yowasp-wavedrom>=3.5.0.7",
]

[build-system]
# https://github.com/pdm-project/pdm-backend/pull/217#issuecomment-2032623648
requires = ["pdm-backend @ git+https://github.com/pdm-project/pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["sphinxcontrib/"] # required for a namespace package

[tool.pdm.dev-dependencies]
test = ["furo"]

[tool.pdm.scripts]
test = "sphinx-build -aE -b html test test/_out"
